<resources>
    <!--    menu const  -->
    <string name="app_name">Snake</string>
    <string name="open_menu">Open menu</string>
    <string name="exit">Exit</string>
    <string name="menu_title">Menu</string>

    <string name="button_new_game">New game</string>
    <string name="button_connect_game">Connect game</string>
    <string name="button_exit">Exit</string>

    <!--    new game fragment   -->
    <string name="title_new_game_settings">Game settings</string>
    <string name="first_block_settings">Map settings</string>
    <string name="first_block_first_setting">Map height</string>
    <string name="first_block_second_setting">Map width</string>
    <string name="initial_size_map">10</string>
    <string name="button_next_stage">Next</string>

    <string name="second_block_settings">Other settings</string>
    <string name="second_block_first_setting">Static count food</string>
    <string name="initial_static_food">1</string>
    <string name="second_block_second_setting">Game speed</string>
    <string name="initial_speed_game">1000</string>

    <!--    connect fragment const -->
    <string name="title_connect_game">Connect game</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="player_color">Player color</string>
    <string name="start_game">Start game</string>

    <!--  code constants  -->
</resources>