<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuFragment">

    <ImageView
        android:id="@+id/menu_title"
        android:layout_width="381dp"
        android:layout_height="58dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/snake_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_new_game"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="200dp"
        android:layout_height="67dp"
        android:layout_marginTop="120dp"
        android:text="@string/button_new_game"
        android:textAllCaps="false"
        android:textColor="@color/menu_button"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_title" />

    <Button
        android:id="@+id/button_connect_game"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="200dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_connect_game"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="@color/menu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new_game" />

    <Button
        android:id="@+id/button_exit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="200dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="@color/menu_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_connect_game" />
</androidx.constraintlayout.widget.ConstraintLayout>