<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newGameSettings.NewGameSettingsFragment">
    android:title=""

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="414dp"
        android:layout_height="220dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/largeLayout"
            android:layout_width="409dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/SettingLargeText"
                    android:layout_width="123dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/first_block_settings"
                    app:fontFamily="sans-serif-black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:textAllCaps="false" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout4"
            android:layout_width="413dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/map_width_plain"
                    style="@style/SettingLittleEditText"
                    android:layout_width="77dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="30dp"
                    android:inputType="numberSigned"
                    android:text="@string/initial_size_map"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/SettingLittleText"
                    android:layout_width="126dp"
                    android:layout_height="31dp"
                    android:text="@string/first_block_second_setting"
                    app:fontFamily="monospace"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout5"
            android:layout_width="413dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/largeLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/SettingLittleText"
                    android:layout_width="139dp"
                    android:layout_height="31dp"
                    android:text="@string/first_block_first_setting"
                    app:fontFamily="monospace"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/map_height_plain"
                    style="@style/SettingLittleEditText"
                    android:layout_width="77dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="30dp"
                    android:inputType="numberSigned"
                    android:text="@string/initial_size_map"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="414dp"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <FrameLayout
            android:id="@+id/largeLayout2"
            android:layout_width="409dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView52"
                    style="@style/SettingLargeText"
                    android:layout_width="156dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/second_block_settings"
                    app:fontFamily="sans-serif-black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:textAllCaps="false" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout42"
            android:layout_width="413dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout52">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/game_speed_plain"
                    style="@style/SettingLittleEditText"
                    android:layout_width="77dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="30dp"
                    android:inputType="numberSigned"
                    android:text="@string/initial_size_map"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView62"
                    style="@style/SettingLittleText"
                    android:layout_width="126dp"
                    android:layout_height="31dp"
                    android:text="@string/first_block_second_setting"
                    app:fontFamily="monospace"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout52"
            android:layout_width="413dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/largeLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView22"
                    style="@style/SettingLittleText"
                    android:layout_width="215dp"
                    android:layout_height="31dp"
                    android:text="@string/second_block_first_setting"
                    app:fontFamily="monospace"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/count_food_plain"
                    style="@style/SettingLittleEditText"
                    android:layout_width="77dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="30dp"
                    android:inputType="numberSigned"
                    android:text="@string/initial_size_map"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>